Fix Overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ body {
     font-family: "Prompt", sans-serif;
     background-color: #0F1624;
     overflow-x: hidden;
-    overflow-y: hidden;
+    overflow-y: auto;
    
 }
 
